--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz Game</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Quiz Game</h1>
-    
-  // Write your code from here 
-
-
-  <script src="script.js"></script>
+    <div class="container">
+        <h1>Quiz Game</h1>
+        <div id="quiz-container">
+            <p id="question"></p>
+            <div id="options"></div>
+            <button id="next-btn">Next</button>
+        </div>
+        <p id="score"></p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
